# SOMA-

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_dashboard.sh  run_light.sh  run_scheduler.sh  scheduler.py  server.py  test_light.py
config/: .env.example
docs/: FEATURES.md
frontend/: index.html
frontend/assets/: app.js  styles.css
scripts/: run_dashboard.sh  run_light.sh  run_scheduler.sh
src/: __init__.py  auth.py  baselines.py  calendar.py  data.py  decider.py  devices.py  light.py  light_control.py  mood.py  sleep_prep.py  wake.py  weather.py  whoop_api.py
src/soma/: __init__.py  auth.py  calendar.py  config.py  core.py  data.py  decider.py  light.py  modes.py  mood.py  scheduler.py  server.py  sleep_prep.py  wake.py  weather.py  whoop_api.py
tests/: conftest.py  test_soma.py
